5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4446/executions/1875_2873.log
== TEST (2019-07-02 18:23:13) 
-- CODE:
from numpy import *
from numpy.linalg import *

mat=array(eval(input("digite a matriz: ")))
soma=0

l=mat.shape[0]
for i in range(l):
	prod=mat[i,0]*mat[i,1]
	soma=soma+prod
media=soma/l
print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 18:23:30) 
-- CODE:
from numpy import *
from numpy.linalg import *

mat=array(eval(input("digite a matriz: ")))
soma=0

l=mat.shape[0]
for i in range(l):
	prod=mat[i,0]*mat[i,1]
	soma=soma+prod
media=soma/l
print(round(media, 2))
-- EXECUTION TIME:
1.003
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1875/2873/main.py", line 4, in <module>
    mat=array(eval(input()))
  File "<string>", line 1
    [[6.8,
         ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:23:40) 
-- CODE:
from numpy import *
from numpy.linalg import *

mat=array(eval(input("digite a matriz: ")))
soma=0

l=mat.shape[0]
for i in range(l):
	prod=mat[i,0]*mat[i,1]
	soma=soma+prod
media=soma/l
print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 18:25:12) 
-- CODE:
from numpy import *
from numpy.linalg import *

mat=array(eval(input("digite a matriz: ")))
soma=0

l=mat.shape[0]
for i in range(l):
	prod=mat[i,0]*mat[i,1]
	soma=soma+prod
media=soma/l
print(round(media, 2))
-- EXECUTION TIME:
0.978172
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1875/2873/main.py", line 4, in <module>
    mat=array(eval(input()))
  File "<string>", line 1
    [[6.8,
         ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 18:25:38) 
-- CODE:
from numpy import *
from numpy.linalg import *

mat=array(eval(input("digite a matriz: ")))
soma=0

l=mat.shape[0]
for i in range(l):
	prod=mat[i,0]*mat[i,1]
	soma=soma+prod
media=float(soma/l)
print(round(media, 2))
-- EXECUTION TIME:
1.08361
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1875/2873/main.py", line 4, in <module>
    mat=array(eval(input()))
  File "<string>", line 1
    [[6.8,
         ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:25:45) 
-- CODE:
from numpy import *
from numpy.linalg import *

mat=array(eval(input("digite a matriz: ")))
soma=0

l=mat.shape[0]
for i in range(l):
	prod=mat[i,0]*mat[i,1]
	soma=soma+prod
media=soma/l
print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:26:09) 
-- CODE:
from numpy import *
from numpy.linalg import *

mat=array(eval(input("digite a matriz: ")))
soma=0

l=mat.shape[0]
for i in range(l):
	prod=mat[i,0]*mat[i,1]
	soma=soma+prod
media=soma/l
print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 18:26:20) 
-- CODE:
from numpy import *
from numpy.linalg import *

mat=array(eval(input("digite a matriz: ")))
soma=0

l=mat.shape[0]
for i in range(l):
	prod=mat[i,0]*mat[i,1]
	soma=soma+prod
media=soma/l
print(round(media, 2))
-- EXECUTION TIME:
1.04042
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1875/2873/main.py", line 4, in <module>
    mat=array(eval(input()))
  File "<string>", line 1
    [[6.8,
         ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:26:33) 
-- CODE:
from numpy import *
from numpy.linalg import *

mat=array(eval(input("digite a matriz: ")))
soma=0

l=mat.shape[0]
for i in range(l):
	prod=mat[i,0]*mat[i,1]
	soma=soma+prod
media=soma/l
print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 18:27:16) 
-- CODE:
from numpy import *
from numpy.linalg import *

mat=array(eval(input("digite a matriz: ")))
soma=0

l=mat.shape[0]
for i in range(l):
	prod=mat[i,0]*mat[i,1]
	soma=soma+prod
media=soma/l
print(round(media, 2))
-- EXECUTION TIME:
0.922993
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1875/2873/main.py", line 4, in <module>
    mat=array(eval(input()))
  File "<string>", line 1
    [[6.8,
         ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:27:21) 
-- CODE:
from numpy import *
from numpy.linalg import *

mat=array(eval(input("digite a matriz: ")))
soma=0

l=mat.shape[0]
for i in range(l):
	prod=mat[i,0]*mat[i,1]
	soma=soma+prod
media=soma/l
print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 18:46:03) 
-- CODE:
from numpy import *
from numpy.linalg import *

mat=array(eval(input("digite a matriz: ")))
soma=0

l=mat.shape[0]
for i in range(l):
	prod=mat[i,0]*mat[i,1]
	soma=soma+prod
media=soma/l
print(round(media, 2))
-- EXECUTION TIME:
0.89343
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1875/2873/main.py", line 4, in <module>
    mat=array(eval(input()))
  File "<string>", line 1
    [[6.8,
         ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 18:46:10) 
-- CODE:
from numpy import *
from numpy.linalg import *

mat=array(eval(input("digite a matriz: ")))
soma=0

l=mat.shape[0]
for i in range(l):
	prod=mat[i,0]*mat[i,1]
	soma=soma+prod
media=soma/l
print(round(media, 2))
-- EXECUTION TIME:
1.00391
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1875/2873/main.py", line 4, in <module>
    mat=array(eval(input()))
  File "<string>", line 1
    [[6.8,
         ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 18:46:44) 
-- CODE:
from numpy import *
from numpy.linalg import *

mat=array(eval(input("digite a matriz: ")))
soma=0

l=mat.shape[0]
for i in range(l):
	prod=mat[i,0]*mat[i,1]
	soma=soma+prod
media=soma/l
print(round(media, 2))
-- EXECUTION TIME:
1.04585
-- TEST CASE 1:
---- input:
[[6.8,8.2],[4.2,1.1],[8.4,8.9]]
---- correct output:
45.05
---- user output:
45.05
-- TEST CASE 2:
---- input:
[[6.8,8.2],[5,5],[1.1,2.2]]
---- correct output:
27.73
---- user output:
27.73
-- TEST CASE 3:
---- input:
[[6.8,7.7],[5,6],[6.6,4.4]]
---- correct output:
37.13
---- user output:
37.13
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
